parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    L_CORCH
    R_CORCH

Grammar

Rule 0     S' -> CONSULTA
Rule 1     CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_ ORDER_
Rule 2     SELECT_ -> SELECT CAMPO
Rule 3     SELECT_ -> SELECT DISTINCT CAMPO
Rule 4     CAMPO -> COL COMA CAMPO
Rule 5     CAMPO -> COL
Rule 6     COL -> ID PUNTO ID
Rule 7     COL -> ID PUNTO ID AS COMILLA ID COMILLA
Rule 8     COL -> FUNCION AS COMILLA ID COMILLA
Rule 9     FUNCION -> COUNT L_PARENT ID PUNTO ID R_PARENT
Rule 10    FUNCION -> COUNT DISTINCT L_PARENT ID PUNTO ID R_PARENT
Rule 11    FUNCION -> MIN L_PARENT ID PUNTO ID R_PARENT
Rule 12    FUNCION -> MAX L_PARENT ID PUNTO ID R_PARENT
Rule 13    FROM_ -> FROM TABLA
Rule 14    TABLA -> TAB
Rule 15    TABLA -> TAB COMA TABLA
Rule 16    TAB -> ID
Rule 17    TAB -> ID AS ID
Rule 18    JOIN_ -> INNER JOIN J
Rule 19    JOIN_ -> LEFT JOIN J
Rule 20    JOIN_ -> <empty>
Rule 21    J -> TAB ON W
Rule 22    WHERE_ -> WHERE W
Rule 23    WHERE_ -> <empty>
Rule 24    W -> ID PUNTO ID SIM ID PUNTO ID
Rule 25    W -> ID PUNTO ID SIM VALOR
Rule 26    W -> ID PUNTO ID SUB
Rule 27    W -> W AND W
Rule 28    W -> W OR W
Rule 29    SIM -> IGUAL
Rule 30    SIM -> MAYOR_IGUAL
Rule 31    SIM -> MENOR_IGUAL
Rule 32    SIM -> MAYOR
Rule 33    SIM -> MENOR
Rule 34    SIM -> DIFERENTE
Rule 35    SUB -> IN L_PARENT CONSULTA R_PARENT
Rule 36    SUB -> NOT IN L_PARENT CONSULTA R_PARENT
Rule 37    VALOR -> COMILLA ID COMILLA
Rule 38    VALOR -> NUMBER
Rule 39    GROUP_ -> GROUP BY CAMPO_G HAV
Rule 40    GROUP_ -> <empty>
Rule 41    CAMPO_G -> ID PUNTO ID
Rule 42    CAMPO_G -> ID PUNTO ID COMA CAMPO_G
Rule 43    HAV -> HAVING FUNCION SIM VALOR
Rule 44    HAV -> <empty>
Rule 45    ORDER_ -> ORDER BY CAMPO_O
Rule 46    ORDER_ -> <empty>
Rule 47    CAMPO_O -> ID PUNTO ID TIPO_O
Rule 48    CAMPO_O -> ID PUNTO ID TIPO_O COMA CAMPO_O
Rule 49    TIPO_O -> ASC
Rule 50    TIPO_O -> DESC

Terminals, with rules where they appear

AND                  : 27
AS                   : 7 8 17
ASC                  : 49
BY                   : 39 45
COMA                 : 4 15 42 48
COMILLA              : 7 7 8 8 37 37
COUNT                : 9 10
DESC                 : 50
DIFERENTE            : 34
DISTINCT             : 3 10
FROM                 : 13
GROUP                : 39
HAVING               : 43
ID                   : 6 6 7 7 7 8 9 9 10 10 11 11 12 12 16 17 17 24 24 24 24 25 25 26 26 37 41 41 42 42 47 47 48 48
IGUAL                : 29
IN                   : 35 36
INNER                : 18
JOIN                 : 18 19
LEFT                 : 19
L_CORCH              : 
L_PARENT             : 9 10 11 12 35 36
MAX                  : 12
MAYOR                : 32
MAYOR_IGUAL          : 30
MENOR                : 33
MENOR_IGUAL          : 31
MIN                  : 11
NOT                  : 36
NUMBER               : 38
ON                   : 21
OR                   : 28
ORDER                : 45
PUNTO                : 6 7 9 10 11 12 24 24 25 26 41 42 47 48
R_CORCH              : 
R_PARENT             : 9 10 11 12 35 36
SELECT               : 2 3
WHERE                : 22
error                : 

Nonterminals, with rules where they appear

CAMPO                : 2 3 4
CAMPO_G              : 39 42
CAMPO_O              : 45 48
COL                  : 4 5
CONSULTA             : 35 36 0
FROM_                : 1
FUNCION              : 8 43
GROUP_               : 1
HAV                  : 39
J                    : 18 19
JOIN_                : 1
ORDER_               : 1
SELECT_              : 1
SIM                  : 24 25 43
SUB                  : 26
TAB                  : 14 15 21
TABLA                : 13 15
TIPO_O               : 47 48
VALOR                : 25 43
W                    : 21 22 27 27 28 28
WHERE_               : 1

Parsing method: LALR

state 0

    (0) S' -> . CONSULTA
    (1) CONSULTA -> . SELECT_ FROM_ JOIN_ WHERE_ GROUP_ ORDER_
    (2) SELECT_ -> . SELECT CAMPO
    (3) SELECT_ -> . SELECT DISTINCT CAMPO

    SELECT          shift and go to state 3

    CONSULTA                       shift and go to state 1
    SELECT_                        shift and go to state 2

state 1

    (0) S' -> CONSULTA .



state 2

    (1) CONSULTA -> SELECT_ . FROM_ JOIN_ WHERE_ GROUP_ ORDER_
    (13) FROM_ -> . FROM TABLA

    FROM            shift and go to state 5

    FROM_                          shift and go to state 4

state 3

    (2) SELECT_ -> SELECT . CAMPO
    (3) SELECT_ -> SELECT . DISTINCT CAMPO
    (4) CAMPO -> . COL COMA CAMPO
    (5) CAMPO -> . COL
    (6) COL -> . ID PUNTO ID
    (7) COL -> . ID PUNTO ID AS COMILLA ID COMILLA
    (8) COL -> . FUNCION AS COMILLA ID COMILLA
    (9) FUNCION -> . COUNT L_PARENT ID PUNTO ID R_PARENT
    (10) FUNCION -> . COUNT DISTINCT L_PARENT ID PUNTO ID R_PARENT
    (11) FUNCION -> . MIN L_PARENT ID PUNTO ID R_PARENT
    (12) FUNCION -> . MAX L_PARENT ID PUNTO ID R_PARENT

    DISTINCT        shift and go to state 7
    ID              shift and go to state 9
    COUNT           shift and go to state 11
    MIN             shift and go to state 12
    MAX             shift and go to state 13

    CAMPO                          shift and go to state 6
    COL                            shift and go to state 8
    FUNCION                        shift and go to state 10

state 4

    (1) CONSULTA -> SELECT_ FROM_ . JOIN_ WHERE_ GROUP_ ORDER_
    (18) JOIN_ -> . INNER JOIN J
    (19) JOIN_ -> . LEFT JOIN J
    (20) JOIN_ -> .

    INNER           shift and go to state 15
    LEFT            shift and go to state 16
    WHERE           reduce using rule 20 (JOIN_ -> .)
    GROUP           reduce using rule 20 (JOIN_ -> .)
    ORDER           reduce using rule 20 (JOIN_ -> .)
    $end            reduce using rule 20 (JOIN_ -> .)
    R_PARENT        reduce using rule 20 (JOIN_ -> .)

    JOIN_                          shift and go to state 14

state 5

    (13) FROM_ -> FROM . TABLA
    (14) TABLA -> . TAB
    (15) TABLA -> . TAB COMA TABLA
    (16) TAB -> . ID
    (17) TAB -> . ID AS ID

    ID              shift and go to state 19

    TABLA                          shift and go to state 17
    TAB                            shift and go to state 18

state 6

    (2) SELECT_ -> SELECT CAMPO .

    FROM            reduce using rule 2 (SELECT_ -> SELECT CAMPO .)


state 7

    (3) SELECT_ -> SELECT DISTINCT . CAMPO
    (4) CAMPO -> . COL COMA CAMPO
    (5) CAMPO -> . COL
    (6) COL -> . ID PUNTO ID
    (7) COL -> . ID PUNTO ID AS COMILLA ID COMILLA
    (8) COL -> . FUNCION AS COMILLA ID COMILLA
    (9) FUNCION -> . COUNT L_PARENT ID PUNTO ID R_PARENT
    (10) FUNCION -> . COUNT DISTINCT L_PARENT ID PUNTO ID R_PARENT
    (11) FUNCION -> . MIN L_PARENT ID PUNTO ID R_PARENT
    (12) FUNCION -> . MAX L_PARENT ID PUNTO ID R_PARENT

    ID              shift and go to state 9
    COUNT           shift and go to state 11
    MIN             shift and go to state 12
    MAX             shift and go to state 13

    CAMPO                          shift and go to state 20
    COL                            shift and go to state 8
    FUNCION                        shift and go to state 10

state 8

    (4) CAMPO -> COL . COMA CAMPO
    (5) CAMPO -> COL .

    COMA            shift and go to state 21
    FROM            reduce using rule 5 (CAMPO -> COL .)


state 9

    (6) COL -> ID . PUNTO ID
    (7) COL -> ID . PUNTO ID AS COMILLA ID COMILLA

    PUNTO           shift and go to state 22


state 10

    (8) COL -> FUNCION . AS COMILLA ID COMILLA

    AS              shift and go to state 23


state 11

    (9) FUNCION -> COUNT . L_PARENT ID PUNTO ID R_PARENT
    (10) FUNCION -> COUNT . DISTINCT L_PARENT ID PUNTO ID R_PARENT

    L_PARENT        shift and go to state 24
    DISTINCT        shift and go to state 25


state 12

    (11) FUNCION -> MIN . L_PARENT ID PUNTO ID R_PARENT

    L_PARENT        shift and go to state 26


state 13

    (12) FUNCION -> MAX . L_PARENT ID PUNTO ID R_PARENT

    L_PARENT        shift and go to state 27


state 14

    (1) CONSULTA -> SELECT_ FROM_ JOIN_ . WHERE_ GROUP_ ORDER_
    (22) WHERE_ -> . WHERE W
    (23) WHERE_ -> .

    WHERE           shift and go to state 29
    GROUP           reduce using rule 23 (WHERE_ -> .)
    ORDER           reduce using rule 23 (WHERE_ -> .)
    $end            reduce using rule 23 (WHERE_ -> .)
    R_PARENT        reduce using rule 23 (WHERE_ -> .)

    WHERE_                         shift and go to state 28

state 15

    (18) JOIN_ -> INNER . JOIN J

    JOIN            shift and go to state 30


state 16

    (19) JOIN_ -> LEFT . JOIN J

    JOIN            shift and go to state 31


state 17

    (13) FROM_ -> FROM TABLA .

    INNER           reduce using rule 13 (FROM_ -> FROM TABLA .)
    LEFT            reduce using rule 13 (FROM_ -> FROM TABLA .)
    WHERE           reduce using rule 13 (FROM_ -> FROM TABLA .)
    GROUP           reduce using rule 13 (FROM_ -> FROM TABLA .)
    ORDER           reduce using rule 13 (FROM_ -> FROM TABLA .)
    $end            reduce using rule 13 (FROM_ -> FROM TABLA .)
    R_PARENT        reduce using rule 13 (FROM_ -> FROM TABLA .)


state 18

    (14) TABLA -> TAB .
    (15) TABLA -> TAB . COMA TABLA

    INNER           reduce using rule 14 (TABLA -> TAB .)
    LEFT            reduce using rule 14 (TABLA -> TAB .)
    WHERE           reduce using rule 14 (TABLA -> TAB .)
    GROUP           reduce using rule 14 (TABLA -> TAB .)
    ORDER           reduce using rule 14 (TABLA -> TAB .)
    $end            reduce using rule 14 (TABLA -> TAB .)
    R_PARENT        reduce using rule 14 (TABLA -> TAB .)
    COMA            shift and go to state 32


state 19

    (16) TAB -> ID .
    (17) TAB -> ID . AS ID

    COMA            reduce using rule 16 (TAB -> ID .)
    INNER           reduce using rule 16 (TAB -> ID .)
    LEFT            reduce using rule 16 (TAB -> ID .)
    WHERE           reduce using rule 16 (TAB -> ID .)
    GROUP           reduce using rule 16 (TAB -> ID .)
    ORDER           reduce using rule 16 (TAB -> ID .)
    $end            reduce using rule 16 (TAB -> ID .)
    R_PARENT        reduce using rule 16 (TAB -> ID .)
    ON              reduce using rule 16 (TAB -> ID .)
    AS              shift and go to state 33


state 20

    (3) SELECT_ -> SELECT DISTINCT CAMPO .

    FROM            reduce using rule 3 (SELECT_ -> SELECT DISTINCT CAMPO .)


state 21

    (4) CAMPO -> COL COMA . CAMPO
    (4) CAMPO -> . COL COMA CAMPO
    (5) CAMPO -> . COL
    (6) COL -> . ID PUNTO ID
    (7) COL -> . ID PUNTO ID AS COMILLA ID COMILLA
    (8) COL -> . FUNCION AS COMILLA ID COMILLA
    (9) FUNCION -> . COUNT L_PARENT ID PUNTO ID R_PARENT
    (10) FUNCION -> . COUNT DISTINCT L_PARENT ID PUNTO ID R_PARENT
    (11) FUNCION -> . MIN L_PARENT ID PUNTO ID R_PARENT
    (12) FUNCION -> . MAX L_PARENT ID PUNTO ID R_PARENT

    ID              shift and go to state 9
    COUNT           shift and go to state 11
    MIN             shift and go to state 12
    MAX             shift and go to state 13

    COL                            shift and go to state 8
    CAMPO                          shift and go to state 34
    FUNCION                        shift and go to state 10

state 22

    (6) COL -> ID PUNTO . ID
    (7) COL -> ID PUNTO . ID AS COMILLA ID COMILLA

    ID              shift and go to state 35


state 23

    (8) COL -> FUNCION AS . COMILLA ID COMILLA

    COMILLA         shift and go to state 36


state 24

    (9) FUNCION -> COUNT L_PARENT . ID PUNTO ID R_PARENT

    ID              shift and go to state 37


state 25

    (10) FUNCION -> COUNT DISTINCT . L_PARENT ID PUNTO ID R_PARENT

    L_PARENT        shift and go to state 38


state 26

    (11) FUNCION -> MIN L_PARENT . ID PUNTO ID R_PARENT

    ID              shift and go to state 39


state 27

    (12) FUNCION -> MAX L_PARENT . ID PUNTO ID R_PARENT

    ID              shift and go to state 40


state 28

    (1) CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ . GROUP_ ORDER_
    (39) GROUP_ -> . GROUP BY CAMPO_G HAV
    (40) GROUP_ -> .

    GROUP           shift and go to state 42
    ORDER           reduce using rule 40 (GROUP_ -> .)
    $end            reduce using rule 40 (GROUP_ -> .)
    R_PARENT        reduce using rule 40 (GROUP_ -> .)

    GROUP_                         shift and go to state 41

state 29

    (22) WHERE_ -> WHERE . W
    (24) W -> . ID PUNTO ID SIM ID PUNTO ID
    (25) W -> . ID PUNTO ID SIM VALOR
    (26) W -> . ID PUNTO ID SUB
    (27) W -> . W AND W
    (28) W -> . W OR W

    ID              shift and go to state 44

    W                              shift and go to state 43

state 30

    (18) JOIN_ -> INNER JOIN . J
    (21) J -> . TAB ON W
    (16) TAB -> . ID
    (17) TAB -> . ID AS ID

    ID              shift and go to state 19

    J                              shift and go to state 45
    TAB                            shift and go to state 46

state 31

    (19) JOIN_ -> LEFT JOIN . J
    (21) J -> . TAB ON W
    (16) TAB -> . ID
    (17) TAB -> . ID AS ID

    ID              shift and go to state 19

    J                              shift and go to state 47
    TAB                            shift and go to state 46

state 32

    (15) TABLA -> TAB COMA . TABLA
    (14) TABLA -> . TAB
    (15) TABLA -> . TAB COMA TABLA
    (16) TAB -> . ID
    (17) TAB -> . ID AS ID

    ID              shift and go to state 19

    TAB                            shift and go to state 18
    TABLA                          shift and go to state 48

state 33

    (17) TAB -> ID AS . ID

    ID              shift and go to state 49


state 34

    (4) CAMPO -> COL COMA CAMPO .

    FROM            reduce using rule 4 (CAMPO -> COL COMA CAMPO .)


state 35

    (6) COL -> ID PUNTO ID .
    (7) COL -> ID PUNTO ID . AS COMILLA ID COMILLA

    COMA            reduce using rule 6 (COL -> ID PUNTO ID .)
    FROM            reduce using rule 6 (COL -> ID PUNTO ID .)
    AS              shift and go to state 50


state 36

    (8) COL -> FUNCION AS COMILLA . ID COMILLA

    ID              shift and go to state 51


state 37

    (9) FUNCION -> COUNT L_PARENT ID . PUNTO ID R_PARENT

    PUNTO           shift and go to state 52


state 38

    (10) FUNCION -> COUNT DISTINCT L_PARENT . ID PUNTO ID R_PARENT

    ID              shift and go to state 53


state 39

    (11) FUNCION -> MIN L_PARENT ID . PUNTO ID R_PARENT

    PUNTO           shift and go to state 54


state 40

    (12) FUNCION -> MAX L_PARENT ID . PUNTO ID R_PARENT

    PUNTO           shift and go to state 55


state 41

    (1) CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_ . ORDER_
    (45) ORDER_ -> . ORDER BY CAMPO_O
    (46) ORDER_ -> .

    ORDER           shift and go to state 57
    $end            reduce using rule 46 (ORDER_ -> .)
    R_PARENT        reduce using rule 46 (ORDER_ -> .)

    ORDER_                         shift and go to state 56

state 42

    (39) GROUP_ -> GROUP . BY CAMPO_G HAV

    BY              shift and go to state 58


state 43

    (22) WHERE_ -> WHERE W .
    (27) W -> W . AND W
    (28) W -> W . OR W

    GROUP           reduce using rule 22 (WHERE_ -> WHERE W .)
    ORDER           reduce using rule 22 (WHERE_ -> WHERE W .)
    $end            reduce using rule 22 (WHERE_ -> WHERE W .)
    R_PARENT        reduce using rule 22 (WHERE_ -> WHERE W .)
    AND             shift and go to state 59
    OR              shift and go to state 60


state 44

    (24) W -> ID . PUNTO ID SIM ID PUNTO ID
    (25) W -> ID . PUNTO ID SIM VALOR
    (26) W -> ID . PUNTO ID SUB

    PUNTO           shift and go to state 61


state 45

    (18) JOIN_ -> INNER JOIN J .

    WHERE           reduce using rule 18 (JOIN_ -> INNER JOIN J .)
    GROUP           reduce using rule 18 (JOIN_ -> INNER JOIN J .)
    ORDER           reduce using rule 18 (JOIN_ -> INNER JOIN J .)
    $end            reduce using rule 18 (JOIN_ -> INNER JOIN J .)
    R_PARENT        reduce using rule 18 (JOIN_ -> INNER JOIN J .)


state 46

    (21) J -> TAB . ON W

    ON              shift and go to state 62


state 47

    (19) JOIN_ -> LEFT JOIN J .

    WHERE           reduce using rule 19 (JOIN_ -> LEFT JOIN J .)
    GROUP           reduce using rule 19 (JOIN_ -> LEFT JOIN J .)
    ORDER           reduce using rule 19 (JOIN_ -> LEFT JOIN J .)
    $end            reduce using rule 19 (JOIN_ -> LEFT JOIN J .)
    R_PARENT        reduce using rule 19 (JOIN_ -> LEFT JOIN J .)


state 48

    (15) TABLA -> TAB COMA TABLA .

    INNER           reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    LEFT            reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    WHERE           reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    GROUP           reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    ORDER           reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    $end            reduce using rule 15 (TABLA -> TAB COMA TABLA .)
    R_PARENT        reduce using rule 15 (TABLA -> TAB COMA TABLA .)


state 49

    (17) TAB -> ID AS ID .

    COMA            reduce using rule 17 (TAB -> ID AS ID .)
    INNER           reduce using rule 17 (TAB -> ID AS ID .)
    LEFT            reduce using rule 17 (TAB -> ID AS ID .)
    WHERE           reduce using rule 17 (TAB -> ID AS ID .)
    GROUP           reduce using rule 17 (TAB -> ID AS ID .)
    ORDER           reduce using rule 17 (TAB -> ID AS ID .)
    $end            reduce using rule 17 (TAB -> ID AS ID .)
    R_PARENT        reduce using rule 17 (TAB -> ID AS ID .)
    ON              reduce using rule 17 (TAB -> ID AS ID .)


state 50

    (7) COL -> ID PUNTO ID AS . COMILLA ID COMILLA

    COMILLA         shift and go to state 63


state 51

    (8) COL -> FUNCION AS COMILLA ID . COMILLA

    COMILLA         shift and go to state 64


state 52

    (9) FUNCION -> COUNT L_PARENT ID PUNTO . ID R_PARENT

    ID              shift and go to state 65


state 53

    (10) FUNCION -> COUNT DISTINCT L_PARENT ID . PUNTO ID R_PARENT

    PUNTO           shift and go to state 66


state 54

    (11) FUNCION -> MIN L_PARENT ID PUNTO . ID R_PARENT

    ID              shift and go to state 67


state 55

    (12) FUNCION -> MAX L_PARENT ID PUNTO . ID R_PARENT

    ID              shift and go to state 68


state 56

    (1) CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_ ORDER_ .

    $end            reduce using rule 1 (CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_ ORDER_ .)
    R_PARENT        reduce using rule 1 (CONSULTA -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_ ORDER_ .)


state 57

    (45) ORDER_ -> ORDER . BY CAMPO_O

    BY              shift and go to state 69


state 58

    (39) GROUP_ -> GROUP BY . CAMPO_G HAV
    (41) CAMPO_G -> . ID PUNTO ID
    (42) CAMPO_G -> . ID PUNTO ID COMA CAMPO_G

    ID              shift and go to state 71

    CAMPO_G                        shift and go to state 70

state 59

    (27) W -> W AND . W
    (24) W -> . ID PUNTO ID SIM ID PUNTO ID
    (25) W -> . ID PUNTO ID SIM VALOR
    (26) W -> . ID PUNTO ID SUB
    (27) W -> . W AND W
    (28) W -> . W OR W

    ID              shift and go to state 44

    W                              shift and go to state 72

state 60

    (28) W -> W OR . W
    (24) W -> . ID PUNTO ID SIM ID PUNTO ID
    (25) W -> . ID PUNTO ID SIM VALOR
    (26) W -> . ID PUNTO ID SUB
    (27) W -> . W AND W
    (28) W -> . W OR W

    ID              shift and go to state 44

    W                              shift and go to state 73

state 61

    (24) W -> ID PUNTO . ID SIM ID PUNTO ID
    (25) W -> ID PUNTO . ID SIM VALOR
    (26) W -> ID PUNTO . ID SUB

    ID              shift and go to state 74


state 62

    (21) J -> TAB ON . W
    (24) W -> . ID PUNTO ID SIM ID PUNTO ID
    (25) W -> . ID PUNTO ID SIM VALOR
    (26) W -> . ID PUNTO ID SUB
    (27) W -> . W AND W
    (28) W -> . W OR W

    ID              shift and go to state 44

    W                              shift and go to state 75

state 63

    (7) COL -> ID PUNTO ID AS COMILLA . ID COMILLA

    ID              shift and go to state 76


state 64

    (8) COL -> FUNCION AS COMILLA ID COMILLA .

    COMA            reduce using rule 8 (COL -> FUNCION AS COMILLA ID COMILLA .)
    FROM            reduce using rule 8 (COL -> FUNCION AS COMILLA ID COMILLA .)


state 65

    (9) FUNCION -> COUNT L_PARENT ID PUNTO ID . R_PARENT

    R_PARENT        shift and go to state 77


state 66

    (10) FUNCION -> COUNT DISTINCT L_PARENT ID PUNTO . ID R_PARENT

    ID              shift and go to state 78


state 67

    (11) FUNCION -> MIN L_PARENT ID PUNTO ID . R_PARENT

    R_PARENT        shift and go to state 79


state 68

    (12) FUNCION -> MAX L_PARENT ID PUNTO ID . R_PARENT

    R_PARENT        shift and go to state 80


state 69

    (45) ORDER_ -> ORDER BY . CAMPO_O
    (47) CAMPO_O -> . ID PUNTO ID TIPO_O
    (48) CAMPO_O -> . ID PUNTO ID TIPO_O COMA CAMPO_O

    ID              shift and go to state 82

    CAMPO_O                        shift and go to state 81

state 70

    (39) GROUP_ -> GROUP BY CAMPO_G . HAV
    (43) HAV -> . HAVING FUNCION SIM VALOR
    (44) HAV -> .

    HAVING          shift and go to state 84
    ORDER           reduce using rule 44 (HAV -> .)
    $end            reduce using rule 44 (HAV -> .)
    R_PARENT        reduce using rule 44 (HAV -> .)

    HAV                            shift and go to state 83

state 71

    (41) CAMPO_G -> ID . PUNTO ID
    (42) CAMPO_G -> ID . PUNTO ID COMA CAMPO_G

    PUNTO           shift and go to state 85


state 72

    (27) W -> W AND W .
    (27) W -> W . AND W
    (28) W -> W . OR W

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    GROUP           reduce using rule 27 (W -> W AND W .)
    ORDER           reduce using rule 27 (W -> W AND W .)
    $end            reduce using rule 27 (W -> W AND W .)
    R_PARENT        reduce using rule 27 (W -> W AND W .)
    WHERE           reduce using rule 27 (W -> W AND W .)
    AND             shift and go to state 59
    OR              shift and go to state 60

  ! AND             [ reduce using rule 27 (W -> W AND W .) ]
  ! OR              [ reduce using rule 27 (W -> W AND W .) ]


state 73

    (28) W -> W OR W .
    (27) W -> W . AND W
    (28) W -> W . OR W

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    GROUP           reduce using rule 28 (W -> W OR W .)
    ORDER           reduce using rule 28 (W -> W OR W .)
    $end            reduce using rule 28 (W -> W OR W .)
    R_PARENT        reduce using rule 28 (W -> W OR W .)
    WHERE           reduce using rule 28 (W -> W OR W .)
    AND             shift and go to state 59
    OR              shift and go to state 60

  ! AND             [ reduce using rule 28 (W -> W OR W .) ]
  ! OR              [ reduce using rule 28 (W -> W OR W .) ]


state 74

    (24) W -> ID PUNTO ID . SIM ID PUNTO ID
    (25) W -> ID PUNTO ID . SIM VALOR
    (26) W -> ID PUNTO ID . SUB
    (29) SIM -> . IGUAL
    (30) SIM -> . MAYOR_IGUAL
    (31) SIM -> . MENOR_IGUAL
    (32) SIM -> . MAYOR
    (33) SIM -> . MENOR
    (34) SIM -> . DIFERENTE
    (35) SUB -> . IN L_PARENT CONSULTA R_PARENT
    (36) SUB -> . NOT IN L_PARENT CONSULTA R_PARENT

    IGUAL           shift and go to state 88
    MAYOR_IGUAL     shift and go to state 89
    MENOR_IGUAL     shift and go to state 90
    MAYOR           shift and go to state 91
    MENOR           shift and go to state 92
    DIFERENTE       shift and go to state 93
    IN              shift and go to state 94
    NOT             shift and go to state 95

    SIM                            shift and go to state 86
    SUB                            shift and go to state 87

state 75

    (21) J -> TAB ON W .
    (27) W -> W . AND W
    (28) W -> W . OR W
